# higher-order-closure.rs

./: Cargo.toml  README.md  cargo_publish.sh  rust-toolchain.toml
.github/workflows/: CI.yml  future-proof.yml
src/: compile_fail_tests.md  lib.rs
