# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[package]
name = "higher-order-closure"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"
]
version = "0.0.4"  # Keep in sync
edition = "2018"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/higher-order-closure.rs"
documentation = "https://docs.rs/higher-order-closure"
readme = "README.md"

description = "Allow function lifetime elision and explicit `for<'a>` annotations on closures."
keywords = ["closure", "signature", "higher_order", "hrtb", "lifetime"]

[features]
better-docs = []  # allowed to break MSRV
ui-tests = ["better-docs"]

[dependencies]

[dev-dependencies]

[workspace]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
